--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Build jitsi-keycloak-adapter
       run: |
-        docker build -t jitsi-keycloak-adapter
+        docker build ./ -t jitsi-keycloak-adapter
 
     - name: Login to registry
       uses: docker/login-action@v2
