refactor: github action, new steps, 2

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -21,7 +21,7 @@ jobs:
       id: meta
       with:
         images: |
-          nordeck/jitsi-keycloak-adapter
+          ghcr.io/nordeck/jitsi-keycloak-adapter
         tags: |
           type=sha
 
