refactor: github action, revoke changes

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -7,34 +7,27 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  DOCKER_IMAGE: ghcr.io/nordeck/jitsi-keycloak-adapter
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: Metadata
-      uses: docker/metadata-action@v4
-      id: meta
-      with:
-        images: |
-          ghcr.io/nordeck/jitsi-keycloak-adapter
-        tags: |
-          type=sha
+    - name: Build jitsi-keycloak-adapter
+      run: |
+        docker build ./ -t jitsi-keycloak-adapter
 
-    - name: Login
+    - name: Login to registry
       uses: docker/login-action@v2
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
+    - name: Push jitsi-keycloak-adapter
+      run: |
+        docker tag jitsi-keycloak-adapter:latest ${{ env.DOCKER_IMAGE }}:latest
+        docker push ${{ env.DOCKER_IMAGE }}:latest
