--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -17,19 +17,24 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Login
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
     - name: Metadata
       uses: docker/metadata-action@v4
       id: meta
       with:
         images: |
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+    - name: Login
+      uses: docker/login-action@v2
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+      tags: |
+        type=ref,event=branch
+        type=ref,event=pr
+        type=semver,pattern={{version}}
+        type=semver,pattern={{major}}.{{minor}}
 
     - name: Build and push
       uses: docker/build-push-action@v4
