--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -24,10 +24,9 @@ jobs:
         images: |
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
+          type=schedule,pattern={{date 'YYYYMMDD'}}
+          type=raw,value=latest
+          type=sha
 
     - name: Login
       uses: docker/login-action@v2
