--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -32,7 +32,7 @@ jobs:
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
           type=raw,value=latest
-          type=raw,value=${{ env.BUILD_DATE }}
+          type=raw,value=v${{ env.BUILD_DATE }}
 
     - name: Login
       uses: docker/login-action@v2
