--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -16,6 +16,10 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
 
     steps:
     - name: Checkout
@@ -42,10 +46,19 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Install Cosign
+      uses: sigstore/cosign-installer@11086d25041f77fe8fe7b9ea4e48e3b9192b8f19 # @v3.1.2
+
     - name: Build and push
+      id: build_and_push
       uses: docker/build-push-action@v4
       with:
         context: .
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+
+    - name: Sign the images with GitHub OIDC Token
+      env:
+        DIGEST: ${{ steps.build_and_push.outputs.digest }}
+      run: cosign sign --yes "${DOCKER_IMAGE}@${DIGEST}"
