refactor: dont run the job template if patchJVB is already disabled

--- a/charts/jitsi-keycloak-adapter/templates/job.yaml
+++ b/charts/jitsi-keycloak-adapter/templates/job.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.patchJVB.enabled -}}
 ---
 apiVersion: "batch/v1"
 kind: "Job"
@@ -50,3 +51,4 @@ spec:
           configMap:
             name: {{ include "common.names.fullname" . | quote }}
 ...
+{{- end }}
