--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -61,4 +61,4 @@ jobs:
     - name: Sign the images with GitHub OIDC Token
       env:
         DIGEST: ${{ steps.build_and_push.outputs.digest }}
-      run: cosign sign --yes "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{DIGEST}}"
+      run: cosign sign --yes "${ env.REGISTRY }/${ env.IMAGE_NAME }@${DIGEST}"
