update cosing image name
Signed-off-by: AHMAD KADRI <52747422+ahmadkadri@users.noreply.github.com>

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -58,7 +58,8 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
 
-    - name: Sign the images with GitHub OIDC Token
+      - name: Sign the images with GitHub OIDC Token
       env:
+        DOCKER_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         DIGEST: ${{ steps.build_and_push.outputs.digest }}
-      run: cosign sign --yes "${ REGISTRY }/${ IMAGE_NAME }@${DIGEST}"
+      run: cosign sign --yes "${DOCKER_IMAGE}@${DIGEST}"
