refactor: add KEYCLOAK_ORIGIN_INTERNAL into Helm Charts

--- a/charts/jitsi-keycloak-adapter/templates/deployment.yaml
+++ b/charts/jitsi-keycloak-adapter/templates/deployment.yaml
@@ -64,6 +64,8 @@ spec:
               {{- else }}
               value: "https://{{- .Values.global.hosts.keycloak}}.{{ .Values.global.domain }}"
               {{- end }}
+            - name: KEYCLOAK_ORIGIN_INTERNAL
+              value: {{ .Values.settings.keycloakOriginInternal | quote }}
             - name: KEYCLOAK_REALM
               value: {{ .Values.settings.keycloakRealm | quote }}
             - name: KEYCLOAK_CLIENT_ID
