--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - "main"
+    tags:
+      - 'v*.*.*'
     paths:
       - ".github/**"
       - "Dockerfile"
@@ -43,11 +45,8 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ github.repository_owner }}
+        username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Install Cosign
-      uses: sigstore/cosign-installer@11086d25041f77fe8fe7b9ea4e48e3b9192b8f19 # @v3.1.2
 
     - name: Build and push
       id: build_and_push
@@ -58,8 +57,3 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
 
-    - name: Sign the images with GitHub OIDC Token
-      env:
-        DOCKER_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        DIGEST: ${{ steps.build_and_push.outputs.digest }}
-      run: cosign sign --yes "${DOCKER_IMAGE}@${DIGEST}"
