--- a/templates/etc/nginx/sites-available/example.conf
+++ b/templates/etc/nginx/sites-available/example.conf
@@ -43,8 +43,8 @@ server {
     }
 }
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name jitsi.mydomain.corp;
 
     # Mozilla Guideline v5.4, nginx 1.17.7, OpenSSL 1.1.1d, intermediate configuration
@@ -58,6 +58,8 @@ server {
 
     add_header Strict-Transport-Security "max-age=63072000" always;
     set $prefix "";
+    set $custom_index "";
+    set $config_js_location /etc/jitsi/meet/jitsi.mydomain.corp-config.js;
 
     ssl_certificate /etc/jitsi/meet/jitsi.mydomain.corp.crt;
     ssl_certificate_key /etc/jitsi/meet/jitsi.mydomain.corp.key;
@@ -101,8 +103,10 @@ server {
         proxy_set_header Host $http_host;
     }
 
+    include /etc/jitsi/meet/jaas/*.conf;
+
     location = /config.js {
-        alias /etc/jitsi/meet/jitsi.mydomain.corp-config.js;
+        alias $config_js_location;
     }
 
     location = /external_api.js {
@@ -116,8 +120,13 @@ server {
         proxy_set_header Host $http_host;
     }
 
+    location ~ ^/_api/public/(.*)$ {
+        autoindex off;
+        alias /etc/jitsi/meet/public/$1;
+    }
+
     # ensure all static content can always be found first
-    location ~ ^/(libs|css|static|images|fonts|lang|sounds|connection_optimization|.well-known)/(.*)$
+    location ~ ^/(libs|css|static|images|fonts|lang|sounds|.well-known)/(.*)$
     {
         add_header 'Access-Control-Allow-Origin' '*';
         alias /usr/share/jitsi-meet/$1/$2;
@@ -174,7 +183,17 @@ server {
     #    alias /usr/share/jitsi-meet/load-test/libs/$1;
     #}
 
+    location ~ ^/conference-request/v1(\/.*)?$ {
+        proxy_pass http://127.0.0.1:8888/conference-request/v1$1;
+        add_header "Cache-Control" "no-cache, no-store";
+        add_header 'Access-Control-Allow-Origin' '*';
+    }
+    location ~ ^/([^/?&:'"]+)/conference-request/v1(\/.*)?$ {
+        rewrite ^/([^/?&:'"]+)/conference-request/v1(\/.*)?$ /conference-request/v1$2;
+    }
+
     location ~ ^/([^/?&:'"]+)$ {
+        set $roomname "$1";
         try_files $uri @root_path;
     }
 
@@ -195,7 +214,14 @@ server {
         set $subdomain "$1.";
         set $subdir "$1/";
 
-        alias /etc/jitsi/meet/jitsi.mydomain.corp-config.js;
+        alias $config_js_location;
+    }
+
+    # Matches /(TENANT)/pwa-worker.js or /(TENANT)/manifest.json to rewrite to / and look for file
+    location ~ ^/([^/?&:'"]+)/(pwa-worker.js|manifest.json)$ {
+        set $subdomain "$1.";
+        set $subdir "$1/";
+        rewrite ^/([^/?&:'"]+)/(pwa-worker.js|manifest.json)$ /$2;
     }
 
     # BOSH for subdomains
